# obfs4-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/obfs4/common/: csrand.hpp  drbg.hpp  log.hpp  ntor.hpp  prob_dist.hpp  replay_filter.hpp  uniform_dh.hpp
include/obfs4/crypto/: aes_ctr.hpp  elligator2.hpp  field25519.hpp  hash.hpp  secretbox.hpp
include/obfs4/proxy/: socks5.hpp
include/obfs4/transport/: conn.hpp  framing.hpp  handshake.hpp  packet.hpp  state.hpp
include/obfs4/transports/: base.hpp  registry.hpp
include/obfs4/transports/meek_lite/: meek_lite.hpp
include/obfs4/transports/obfs2/: obfs2.hpp
include/obfs4/transports/obfs3/: obfs3.hpp
include/obfs4/transports/obfs4/: obfs4.hpp
include/obfs4/transports/scramblesuit/: scramblesuit.hpp  ticket_store.hpp
proxy/: client_handler.cpp  client_handler.hpp  copy_loop.cpp  copy_loop.hpp  main.cpp  proxy_dialer.cpp  proxy_dialer.hpp  pt_env.cpp  pt_env.hpp  pt_protocol.cpp  pt_protocol.hpp  server_handler.cpp  server_handler.hpp  socks5_server.cpp  socks5_server.hpp  term_monitor.cpp  term_monitor.hpp
src/common/: csrand.cpp  drbg.cpp  log.cpp  ntor.cpp  prob_dist.cpp  replay_filter.cpp  uniform_dh.cpp
src/crypto/: aes_ctr.cpp  elligator2.cpp  field25519.cpp  hash.cpp  secretbox.cpp
src/proxy/: socks5.cpp
src/transport/: conn.cpp  framing.cpp  handshake.cpp  packet.cpp  state.cpp
src/transports/: base.cpp  registry.cpp
src/transports/meek_lite/: meek_lite.cpp
src/transports/obfs2/: obfs2.cpp
src/transports/obfs3/: obfs3.cpp
src/transports/obfs4/: obfs4.cpp
src/transports/scramblesuit/: scramblesuit.cpp  ticket_store.cpp
tests/: test_aes_ctr.cpp  test_drbg.cpp  test_drbg_vectors.cpp  test_elligator2.cpp  test_field25519.cpp  test_framing.cpp  test_handshake.cpp  test_log.cpp  test_ntor.cpp  test_obfs2.cpp  test_obfs3.cpp  test_obfs4.cpp  test_parity_crypto.cpp  test_parity_obfs2.cpp  test_parity_obfs3.cpp  test_parity_obfs4.cpp  test_parity_registry.cpp  test_parity_scramblesuit.cpp  test_parity_socks5.cpp  test_poly1305.cpp  test_pt_env.cpp  test_registry.cpp  test_scramblesuit.cpp  test_secretbox.cpp  test_secretbox_compat.cpp  test_socks5.cpp  test_uniform_dh.cpp
tests/go_secretbox_vectors/: go.mod  main.go
